fixis padding on mobile

--- a/site/src/css/cah.css
+++ b/site/src/css/cah.css
@@ -994,7 +994,7 @@ html,
 
         @media (max-width:700px) {
             #splash.jsx-2145280428 {
-                padding: 64px 0 0 0;
+                padding: 110px 0 0 0;
             }
 
             #splash.jsx-2145280428 .imageContainer.jsx-2145280428 {
